--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
         "pino": "^9.2.0",
         "pino-std-serializers": "^7.0.0",
         "ramda": "^0.30.1",
-        "redis": "^4.6.15"
+        "redis": "^4.6.15",
+        "twilio": "^5.3.5"
     },
     "devDependencies": {
         "eslint": "^8.0.0",
