--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
         "moment": "^2.30.1",
         "mongodb": "^6.9.0",
         "mongoose": "^8.7.3",
-        "pino": "^9.2.0",
+        "pino": "^9.5.0",
+        "pino-caller": "^3.4.0",
         "pino-std-serializers": "^7.0.0",
         "ramda": "^0.30.1",
         "redis": "^4.6.15",
@@ -75,5 +76,4 @@
         ]
     },
     "proxy": "http://localhost:8804"
-
 }
